Upgrade to Java 21 and Jakarta EE 10.0 (17.104.x release line)
- Bump parent maven-framework-parent-pom to released 21.0.0-M3
- Bump maven-common-bom to released 21.0.0-M2
- Migrate all modules to jakarta.* namespace
- Update beans.xml to CDI 4.0 (beans_4_0.xsd)
- Replace org.glassfish:javax.json with jakarta.json
- Fix javax.ws.rs imports in AlfrescoRestClientTest