@@ -5,18 +5,19 @@ This project adheres to [Semantic Versioning](http://semver.org/).
 
 ## [Unreleased]
 
-## [21.0.0-SNAPSHOT] - 2026-03-26
+## [21.0.0-M1] - 2026-06-02
 ### Changed
-- Updated project version to `21.0.0-SNAPSHOT`
-- Updated `maven-framework-parent-pom` to `21.0.0-SNAPSHOT` (Java 21, Jakarta EE 10)
-- Updated `maven-common-bom` to `21.0.0-SNAPSHOT` (CDI 4.0.1, Jakarta EE API 10.0.0)
-- Updated CDI `beans.xml` descriptors from version `1.1` to `4.0` (`beans_4_0.xsd`) across all modules
-- Replaced `org.glassfish:javax.json` dependency with `org.glassfish:jakarta.json` in all modules
-- Resolved git merge conflicts in `JsonObjects`, `MetadataJdbcRepository`, `FileServiceTestClient`, `AlfrescoFileSender`, and `AlfrescoFileRemover` — all migrated to `jakarta.*` imports
-- Fixed `javax.ws.rs` imports in `AlfrescoRestClientTest` to use `jakarta.ws.rs`
-- Updated `openejb.version` in `maven-common-bom` from `8.0.14` to `10.0.0` (TomEE 10 / Jakarta EE 10 / CDI 4.0 support via OpenWebBeans 4.0.3)
-- Updated JaCoCo to `0.8.12` in `maven-parent-pom` for Java 21 class file support
-- Added `argLine` to maven-failsafe-plugin in integration-tests profile with `-Dnet.bytebuddy.experimental=true --add-opens java.base/java.lang=ALL-UNNAMED` for Mockito compatibility on Java 21
+- Upgraded to Java 21 and Jakarta EE 10 (17.104.x release line)
+- Updated `maven-framework-parent-pom` to `21.0.0-M2` and `maven-common-bom` to `21.0.0-M1`
+- Migrated all `javax.*` imports to `jakarta.*` across all modules
+- Updated CDI `beans.xml` descriptors from version `1.1` to `4.0` (`beans_4_0.xsd`) in all modules
+- Removed `org.glassfish:javax.json` dependency; replaced with `org.glassfish:jakarta.json` where needed
+
+### Fixed
+- `MetadataJdbcRepository`: replaced stale `javax.json` static imports; uses `JsonObjects.jsonReaderFactory` (shared factory instance — `Json.createReaderFactory` is expensive and must not be called per-invocation)
+- `FileServiceTestClient`: replaced `jsonBuilderFactory.createObjectBuilder()` with the shared factory from `JsonObjects` for the same reason
+- `AlfrescoRestClientTest`: migrated all `javax.ws.rs.*` imports (including static import) to `jakarta.ws.rs.*`
+- Removed redundant explicit `jakarta.enterprise:jakarta.cdi-api` dependency from `file-alfresco` — already provided transitively by `jakarta.jakartaee-api`
 
 ## [17.104.0-M3] - 2025-10-27
 ### Changed
